# rust-microservice

./: Cargo.toml
src/: main.rs
