[package]
name = "rust-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
fstrings = "0.2.3"
tokio = { version = "1", features = ["full"] }
websockets = "0.3.0"
futures = "0.3.30"
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
